<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/marginplus2"
    tools:context=".AdminSignUpActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/new_user"
        android:textColor="@color/colorLightAccent"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading"
        android:layout_marginTop="@dimen/marginplus2"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/marginplus1"
            app:cardCornerRadius="@dimen/marginplus3">

            <ImageView
                android:id="@+id/iv_pic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/marginplus1"
                android:background="@drawable/ic_camera"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:tag="@string/tap_on_camera_to_add_img" />

            <android.support.v4.widget.ContentLoadingProgressBar
                android:id="@+id/progbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginplus1"
                android:gravity="center"
                android:text="@string/tap_on_camera_to_add_img"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_newsubmit"
        android:layout_below="@+id/camera"
        android:padding="@dimen/marginplus2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginplus1"
                android:text="@string/company_name"
                android:textSize="15sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/optional"
                android:inputType="text"
                android:textColor="@color/colorPrimaryDark"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginplus1"
                android:text="@string/company_address"
                android:textSize="15sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/optional"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/colorPrimaryDark"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginplus1"
                android:text="@string/user_name"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/colorPrimaryDark"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginplus1"
                android:text="@string/email_address"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryDark"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginplus2"
                android:text="@string/new_password"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/colorLightAccent"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginplus2"
                android:text="@string/confirm_password"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etCpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginplus1"
                android:autofillHints=""
                android:inputType="textPassword"
                android:textColor="@color/colorLightAccent"
                tools:ignore="LabelFor" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_newsubmit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/marginplus2"
        android:background="@color/colorPrimary"
        android:text="@string/submit"
        android:textColor="#ffffff"
        android:textSize="20sp" />
</RelativeLayout>