<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Order"
    tools:showIn="@layout/app_bar_order">

    <LinearLayout
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/marginplus2">

        <EditText
            android:id="@+id/et_id"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/rect_grayoutline1"
            android:hint="@string/enter_order_id_to_delete"
            android:inputType="number"
            android:paddingStart="@dimen/marginplus3"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginplus2"
            android:background="@drawable/redbtn"
            android:text="@string/delete"
            android:textColor="@color/textwhite" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/delete"
        android:orientation="vertical"
        android:padding="@dimen/marginplus2">

        <ListView
            android:id="@+id/lvlistviewOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="@dimen/marginplus1">

        </ListView>
    </LinearLayout>

    <TextView
        android:id="@+id/tvDATA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/click_on_button"
        android:text="@string/no_data"
        android:textSize="30sp"
        android:visibility="visible" />

</RelativeLayout>