<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/marginplus3"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".OTPGenerationActivity">

    <TextView
        android:id="@+id/o1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginplus3"
        android:fontFamily="@font/poppins_light"
        android:text="@string/destination"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/o1"
        android:layout_marginBottom="@dimen/marginplus3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvOrderno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginplus1"
            android:fontFamily="@font/poppins_light"
            android:text="@string/order_no"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/et_cust_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginplus1"
            android:fontFamily="@font/poppins_light"
            android:inputType="text"
            android:text="@string/customer_name"
            android:textSize="20sp"
            tools:ignore="TextViewEdits" />

        <TextView
            android:id="@+id/et_mobno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginplus1"
            android:fontFamily="@font/poppins_light"
            android:text="@string/customer_mob"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_generateOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/marginplus5"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/poppins_light"
            android:padding="@dimen/marginplus2"
            android:text="@string/get_otp"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <ProgressBar
            android:id="@+id/progbar"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible" />
        <EditText
            android:id="@+id/et_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints=""
            android:background="@drawable/rect_grayoutline2"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/enter_otp"
            android:inputType="number"
            android:padding="@dimen/marginplus1"
            android:paddingStart="@dimen/marginplus3"
            android:paddingEnd="@dimen/marginplus3"
            android:textSize="20sp"
            android:visibility="visible" />


        <Button
            android:id="@+id/btn_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/marginplus5"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/poppins_light"
            android:padding="@dimen/marginplus2"
            android:text="@string/done"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible" />


    </LinearLayout>


</RelativeLayout>
